fix: fix loader spinner were not showing well

--- a/src/components/AddFriend/_addFriend.scss
+++ b/src/components/AddFriend/_addFriend.scss
@@ -39,7 +39,7 @@
       outline: 1px solid #dd4ec6;
     }
   }
-  .loader-spinner {
+  .add-friend-loader-spinner {
     width: 100%;
     padding-top: 30px;
     display: flex;
